--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@angular/service-worker": "^19.2.7",
     "@capacitor/app": "7.0.0",
     "@capacitor/browser": "^7.0.1",
     "@capacitor/core": "7.1.0",
